--- a/index.html
+++ b/index.html
@@ -10,12 +10,94 @@
 </head>
 
 <body>
-    <div class="select">
-        <select>
-            <option value="1">Вариант 1</option>
-            <option value="1">Вариант 2</option>
-        </select>
-    </div>
+    <style>
+        @media(max-width:768px) {
+            .tel_vgt {
+                transform: scale(1.08);
+            }
+
+            .tel_vgt:hover {
+                transition: all .3s cubic-bezier(.34, .9, .7, 1);
+                -webkit-transform: scaleX(1);
+                -ms-transform: scaleX(1);
+                transform: scaleX(1);
+            }
+        }
+    </style>
+    <address>
+        <div class="tel_vgt">
+            <a style="color: #ffffff; font-size: 1.5em; font-family: verdana, geneva, sans-serif;"
+                href="tel:+79252714471"><strong> +7(925)271-44-71</strong></a>
+        </div>
+        <br>
+        <a style="color: #ffffff; font-size: 1.5em; font-family: verdana, geneva, sans-serif;"
+            href="tel:+79099952528"><strong>+7(909)995-25-28</strong></a>
+    </address>
+
+
+
+
+    <style>
+        .tel_vgt {
+            transform: scale(1.08);
+        }
+
+        .tel_vgt:hover {
+
+            transition: all .1s cubic-bezier(.34, .9, .7, 1);
+            -webkit-transform: scaleX(1);
+            -ms-transform: scaleX(1);
+            transform: scaleX(1);
+        }
+        .address {
+            text-align: center;
+            margin: 0 auto;
+            padding-bottom: 20px;
+        }
+    </style>
+
+
+<style>
+    @media(max-width:768px) {
+         .tel_vgt {
+           transform: scale(1.08);
+        } 
+
+        .tel_vgt:hover {
+
+            transition: all .1s cubic-bezier(.34, .9, .7, 1);
+            -webkit-transform: scaleX(1);
+            -ms-transform: scaleX(1);
+            transform: scaleX(1);
+
+        }
+    }
+</style>
+<address>
+    <div class="tel_vgt">
+        <a style="color: #ffffff; font-size: 1.5em; font-family: verdana, geneva, sans-serif;"
+            href="tel:+79252714471"><strong> +7(925)271-44-71</strong></a></div>
+    <div class="tel_vgt">
+                <a style="color: #ffffff; font-size: 1.5em; font-family: verdana, geneva, sans-serif;"
+         href="tel:+79099952528"><strong>+7(909)995-25-28</strong></a></div>
+</address>
+
+<style>
+    @media(max-width:768px) {
+         .tel_vgt {
+           transform: scale(1.08);
+        } 
+
+        .tel_vgt:hover {
+
+            transition: all .1s cubic-bezier(.34, .9, .7, 1);
+            -webkit-transform: scaleX(1);
+            -ms-transform: scaleX(1);
+            transform: scaleX(1);
+
+        }
+    }
+
 </body>
 
 </html>
