--- a/index.html
+++ b/index.html
@@ -1,103 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css\style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css\style.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-    <style>
-        @media(max-width:768px) {
-            .tel_vgt {
-                transform: scale(1.08);
-            }
-
-            .tel_vgt:hover {
-                transition: all .3s cubic-bezier(.34, .9, .7, 1);
-                -webkit-transform: scaleX(1);
-                -ms-transform: scaleX(1);
-                transform: scaleX(1);
-            }
-        }
-    </style>
-    <address>
-        <div class="tel_vgt">
-            <a style="color: #ffffff; font-size: 1.5em; font-family: verdana, geneva, sans-serif;"
-                href="tel:+79252714471"><strong> +7(925)271-44-71</strong></a>
-        </div>
-        <br>
-        <a style="color: #ffffff; font-size: 1.5em; font-family: verdana, geneva, sans-serif;"
-            href="tel:+79099952528"><strong>+7(909)995-25-28</strong></a>
-    </address>
-
-
-
-
-    <style>
-        .tel_vgt {
-            transform: scale(1.08);
-        }
-
-        .tel_vgt:hover {
-
-            transition: all .1s cubic-bezier(.34, .9, .7, 1);
-            -webkit-transform: scaleX(1);
-            -ms-transform: scaleX(1);
-            transform: scaleX(1);
-        }
-        .address {
-            text-align: center;
-            margin: 0 auto;
-            padding-bottom: 20px;
-        }
-    </style>
-
-
-<style>
-    @media(max-width:768px) {
-         .tel_vgt {
-           transform: scale(1.08);
-        } 
-
-        .tel_vgt:hover {
-
-            transition: all .1s cubic-bezier(.34, .9, .7, 1);
-            -webkit-transform: scaleX(1);
-            -ms-transform: scaleX(1);
-            transform: scaleX(1);
-
-        }
-    }
-</style>
-<address>
-    <div class="tel_vgt">
-        <a style="color: #ffffff; font-size: 1.5em; font-family: verdana, geneva, sans-serif;"
-            href="tel:+79252714471"><strong> +7(925)271-44-71</strong></a></div>
-    <div class="tel_vgt">
-                <a style="color: #ffffff; font-size: 1.5em; font-family: verdana, geneva, sans-serif;"
-         href="tel:+79099952528"><strong>+7(909)995-25-28</strong></a></div>
-</address>
-
-<style>
-    @media(max-width:768px) {
-         .tel_vgt {
-           transform: scale(1.08);
-        } 
-
-        .tel_vgt:hover {
-
-            transition: all .1s cubic-bezier(.34, .9, .7, 1);
-            -webkit-transform: scaleX(1);
-            -ms-transform: scaleX(1);
-            transform: scaleX(1);
-
-        }
-    }
-
-</body>
-
+  <body>
+    <div
+      style="
+        text-align: center;
+        font-family: verdana, geneva, sans-serif;
+        font-size: 24px;
+        color: #ccffff;
+      "
+    >
+      <p>Если Вы задумались о вашем здоровье,</p>
+      <p>
+        Центр оздоровительных практик "ДАО" приглашает Вас приобщиться к
+        искусству Цигун и Тайцзицюань.
+      </p>
+      <p>
+        Это прекрасные общедоступные оздоровительные практики, проверенные
+        столетиями системы, наилучшим образом подходят для достижения
+        физического здоровья, духовного совершенствования, психологической
+        разгрузки и обретения душевной гармонии.
+      </p>
+      <p>По всем вопросам обращайтесь по телефону:</p>
+      <a href="tel: +79857754683;">+7 (985) 775-46-83</a>
+      <p>или на почту: taiсhi-dao75@mail.ru</p>
+    </div>
+  </body>
 </html>
